Run examples generation on Travis
This will work as a quick-and-dirty test that the output
generated by the script is readable by dot, at least for the
few examples that are in the tree.

Additionally, make generate-examples.sh find a Python interpreter
(instead of relying on "python") and fail if any step fails.

FIxes #20.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: python
+addons:
+  apt:
+    packages:
+      - graphviz
 python:
   - "2.7"
   - "3.3"
@@ -7,3 +11,4 @@ python:
   - "3.6"
 script:
   - python -m unittest discover
+  - bash scripts/generate-examples.sh
