Fix name of the job

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ jobs:
   - script: python -m unittest discover
     displayName: 'Unit Tests'
 
-- job: 'Generate sample images'
+- job: 'GenerateSamples'
   dependsOn: 'Test'
   pool:
     vmImage: 'Ubuntu-16.04'
