Run the build daily
To catch regressions that might otherwise be found only at PR merge or commit time.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,15 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
 trigger:
 - master
 
 pr:
 - master
+
+schedules:
+- cron: "0 0 * * *"
+  displayName: Daily build
+  branches:
+    include:
+    - master
 
 jobs:
 
