fix: point CI to the new main branch

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,15 @@
 trigger:
-- master
+- main
 
 pr:
-- master
+- main
 
 schedules:
 - cron: "0 0 * * *"
   displayName: Daily build
   branches:
     include:
-    - master
+    - main
 
 jobs:
 
