fix: add run command to one step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,4 +54,5 @@ jobs:
       run: |
         sudo apt-get install graphviz
     - name: Generate sample images
+      run: |
         bash scripts/generate-examples.sh
